--- a/03Nodejs-Express-Koa2入门实战/views/index.html
+++ b/03Nodejs-Express-Koa2入门实战/views/index.html
@@ -6,21 +6,11 @@
 </head>
 <body>
 <h1>我是标题</h1>
-<form action="/upload" method="post" enctype="multipart/form-data">
+<form action="/doLogin" method="post">
 	<label for="username">用户名</label><input type="text" name="username" id="username"><br>
 	<label for="password">密码</label><input type="password" name="password" id="password"><br>
-	<label>上传图片</label><input type="file" name="img"><br>
-	<label>上传图片</label><input type="file" name="img"><br>
-	<input type="submit" value="提交"><br>
+	<input type="submit" value="登录"><br>
 </form>
-
-<!--<form action="/multiupload" method="post" enctype="multipart/form-data">-->
-<!--	<label>多图片上传</label><input type="file" name="mutilimg"><br>-->
-<!--	<label>多图片上传</label><input type="file" name="mutilimg"><br>-->
-<!--	<label>多图片上传</label><input type="file" name="mutilimg"><br>-->
-<!--	<label>多图片上传</label><input type="file" name="mutilimg"><br>-->
-<!--	<input type="submit" value="提交"><br>-->
-<!--</form>-->
 
 </body>
 </html>
